--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,21 @@
         "source": "spectral"
       }
     },
+
+    {
+      "label": "run prism mock on port 11111",
+      "type": "shell",
+      "command": "prism mock --port 11111 --dynamic ./api/openapi.yaml ",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "dedicated",
+        "showReuseMessage": true,
+        "clear": false
+      },
+      "problemMatcher": []
+    },
     {
       "label": "docker-compose up with GUIs",
       "type": "shell",
