--- a/api/schemas/User.yaml
+++ b/api/schemas/User.yaml
@@ -1,17 +1,18 @@
 # TODO find a way to have these regexes be the source of truth across every component
 type: object
-description: Data requested to login.
+description: Data reprenting an user.
 required:
   - id
 
 properties:
   id:
-    $ref: "./genericId.yaml"
+    $ref: "./GenericId.yaml#"
 
   mail:
     type: string
     format: mail
     # XXX we do NOT offer the possibility to change the email
+    # FIXME patterns are unneeded. the format already specifies a type that we will define elsewhere
     pattern: ^([a-zA-Z0-9_.+-])+@(([a-zA-Z0-9-])+.)+([a-zA-Z0-9])+$
     example: mariorossi@gmail.com
 
@@ -19,6 +20,7 @@ properties:
     type: string
     format: password
     # Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character
+    # FIXME patterns are unneeded. the format already specifies a type that we will define elsewhere
     pattern: ^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,32}$
     minLength: 8
     maxLength: 32
