--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
   // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   // TODO not needed for minimal functionality
   // implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-mail'
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
