--- a/db/time-series/influxdb.conf
+++ b/db/time-series/influxdb.conf
@@ -156,7 +156,7 @@ bind-address = "127.0.0.1:8088"
 
 [coordinator]
   # The default time a write request will wait until a "timeout" error is returned to the caller.
-  # write-timeout = "10s"
+  write-timeout = "30s"
 
   # The maximum number of concurrent queries allowed to be executing at one time.  If a query is
   # executed and exceeds this limit, an error is returned to the caller.  This limit can be disabled
@@ -165,7 +165,7 @@ bind-address = "127.0.0.1:8088"
 
   # The maximum time a query will is allowed to execute before being killed by the system.  This limit
   # can help prevent run away queries.  Setting the value to 0 disables the limit.
-  # query-timeout = "0s"
+  query-timeout = "30s"
 
   # The time threshold when a query will be logged as a slow query.  This limit can be set to help
   # discover slow or resource intensive queries.  Setting the value to 0 disables the slow query logging.
@@ -305,10 +305,10 @@ bind-address = "127.0.0.1:8088"
   https-enabled = true
 
   # The SSL certificate to use when HTTPS is enabled.
-  https-certificate = "/etc/ssl/influxdb.pem"
+  https-certificate = "/etc/ssl/influxdb-selfsigned.crt"
 
   # Use a separate private key location.
-  # https-private-key = ""
+  https-private-key = "/etc/ssl/influxdb-selfsigned.key"
 
   # The JWT auth shared secret to validate requests using JSON web tokens.
   # shared-secret = ""
@@ -376,7 +376,7 @@ bind-address = "127.0.0.1:8088"
   # enabled = true
 
   # The default timeout for HTTP writes to subscribers.
-  # http-timeout = "30s"
+  http-timeout = "30s"
 
   # Allows insecure HTTPS connections to subscribers.  This is useful when testing with self-
   # signed certificates.
