build(docker): finalize docker tsdb configuration

--- a/db/time-series/influxdb.conf
+++ b/db/time-series/influxdb.conf
@@ -9,7 +9,7 @@
 # The data includes a random ID, os, arch, version, the number of series and other
 # usage data. No data from user databases is ever transmitted.
 # Change this option to true to disable reporting.
-# reporting-disabled = false
+reporting-disabled = true
 
 # Bind address to use for the RPC service for backup and restore.
 bind-address = "127.0.0.1:8088"
@@ -156,7 +156,7 @@ bind-address = "127.0.0.1:8088"
 
 [coordinator]
   # The default time a write request will wait until a "timeout" error is returned to the caller.
-  write-timeout = "30s"
+  write-timeout = "10s"
 
   # The maximum number of concurrent queries allowed to be executing at one time.  If a query is
   # executed and exceeds this limit, an error is returned to the caller.  This limit can be disabled
@@ -165,7 +165,7 @@ bind-address = "127.0.0.1:8088"
 
   # The maximum time a query will is allowed to execute before being killed by the system.  This limit
   # can help prevent run away queries.  Setting the value to 0 disables the limit.
-  query-timeout = "30s"
+  query-timeout = "0s"
 
   # The time threshold when a query will be logged as a slow query.  This limit can be set to help
   # discover slow or resource intensive queries.  Setting the value to 0 disables the slow query logging.
@@ -301,14 +301,21 @@ bind-address = "127.0.0.1:8088"
   # endpoints. This setting has no effect if auth-enabled is set to false.
   ping-auth-enabled = true
 
+  # TODO re-enable https in production
   # Determines whether HTTPS is enabled.
-  https-enabled = true
+  https-enabled = false
 
   # The SSL certificate to use when HTTPS is enabled.
-  https-certificate = "/etc/ssl/influxdb-selfsigned.crt"
+  # https-certificate = "/etc/ssl/influxdb-selfsigned.crt"
+
+  # XXX default value was:
+  # https-certificate = "/etc/ssl/influxdb.pem"
 
   # Use a separate private key location.
-  https-private-key = "/etc/ssl/influxdb-selfsigned.key"
+  # https-private-key = "/etc/ssl/influxdb-selfsigned.key"
+
+  # XXX default value was:
+  # https-private-key = ""
 
   # The JWT auth shared secret to validate requests using JSON web tokens.
   # shared-secret = ""
@@ -376,7 +383,7 @@ bind-address = "127.0.0.1:8088"
   # enabled = true
 
   # The default timeout for HTTP writes to subscribers.
-  http-timeout = "30s"
+  # http-timeout = "30s"
 
   # Allows insecure HTTPS connections to subscribers.  This is useful when testing with self-
   # signed certificates.
@@ -523,6 +530,7 @@ bind-address = "127.0.0.1:8088"
   # database = "udp"
   # retention-policy = ""
 
+  # TODO nanoseconds precision is probably too much and unneeded
   # InfluxDB precision for timestamps on received points ("" or "n", "u", "ms", "s", "m", "h")
   # precision = ""
 
