--- a/db/time-series/Dockerfile
+++ b/db/time-series/Dockerfile
@@ -3,6 +3,6 @@ FROM influxdb:1.7
 
 LABEL maintainer="gruppone.swe@gmail.com"
 
-COPY create.sh /docker-entrypoint-initdb.d
+COPY ./influxdb.conf /etc/influxdb/influxdb.conf
 
 EXPOSE 8086
