--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,5 +1,6 @@
 version: "3.7"
 
+# TODO remove this file to expose rdb and tsdb only to the stack's internal network
 services:
   rdb:
     ports:
