--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.application.version=0.3.0
 # ===============================
 # TODO does env file expansion work here?
 # TODO set datasource url
+# spring.datasource.driver-class-name=.....
 # spring.datasource.url=????:????://localhost:3306/
 # spring.datasource.name=stalker-rdb
 # spring.datasource.username=root
