--- a/api/schemas/Place.yaml
+++ b/api/schemas/Place.yaml
@@ -1,10 +1,5 @@
 type: object
 description: Represents a location relative to which an organization wants to track its users movements.
-required:
-  - id
-  - name
-  - position
-  - data
 properties:
   id:
     $ref: "./GenericId.yaml#"
@@ -25,9 +20,33 @@ properties:
         latitude:
           type: number
           format: double
+          minimum: -90
+          maximum: 90
         longitude:
           type: number
           format: double
+          minimum: -180
+          maximum: 180
 
   placeData:
-    $ref: "./PlaceData.yaml#"
+    type: object
+    description: More information on a place
+    # TODO decide which geocoding API we use and have this resource match its type
+    required:
+      - address
+      - city
+      - zipcode
+      - state
+    properties:
+      address:
+        type: string
+        example: via Garibaldi, 1
+      city:
+        type: string
+        example: Padova
+      zipcode:
+        type: string
+        minLength: 5
+        maxLength: 5
+      state:
+        type: string
