--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # ===============================
 # = GENERAL PROPERTIES
 # ===============================
+server.port=11111
 spring.application.name=Stalker server
 # TODO add to bumpfiles or expand from gradle
 spring.application.version=0.1.0
