feat: design PoC API subset (#1)
* feat: start API design

* chore: update configuration

* feat: group dependencies into /resources subfolder

* feat: change reference path

* feat: improvements to API

* feat: continue designing user endpoints

* chore: add .idea to .gitignore

* feat: update and add new endpoint for organizations

* feat: add several endpoints \organization

Watch the TODOs at the end of the file .yml to complete all the endpoints

* feat: adding two organization endpoints and one user endpoint

4 TODOs remaining

* feat: add monitor endpoints and several tracking endpoinst

* feat: add tracking endpoints

* feat: add sql code to generate the database

* feat: add 'organizationid' foreign key to 'place'

* refactor: refactor endpoints' parameters for code reuse

* fix: solve warnings and syntax errors, replace id with userId

* fix: replace id with userId in the paths

* chore: add folder structure for database related files

* refactor: change api files extension to yaml

* fix: solve refs problems

* refactor: restore api folder structure

* fix: remove misused discriminator property

* refactor: change all summaries to descriptions and start rewriting them

* chore: update vscode settings

* refactor: remove subfiles temporarily while troubleshooting schema

* refactor: finish correcting capitalization and periods in descriptions

* fix: resolve some fixme and add new ones

* feat: add the missing stalker mobile/web app tags

* fix: fix descriptions and operationsIds

* fix: add a verb at the start of the operationIds

This fixes useful for the API  documentation

* refactor: add the LDAP todo

* chore: checkout configuration from other branch

* feat: modify openapi.yaml, ready to use for POC

* chore: update password and email pattern with the ones used in webapp

* chore(docs): add style for uml class diagrams

* chore: add docs scope to chore type for git cz

The

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,11 @@
   "editor.tabSize": 2,
   "files.encoding": "utf8",
   "files.eol": "\n",
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true
+  },
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "git-graph.dialog.rebase.ignoreDate": false,
@@ -21,7 +26,6 @@
   "java.format.enabled": true,
   "java.format.onType.enabled": true,
   "java.format.comments.enabled": true,
-  // "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.codeGeneration.generateComments": true,
   "java.codeGeneration.useBlocks": true,
   "java.completion.guessMethodArguments": true,
