--- a/src/main/resources/local.properties.template
+++ b/src/main/resources/local.properties.template
@@ -1,3 +1,3 @@
 # create a file here named local.properties and put the actual passwords there
 spring.datasource.password=example-root-password
-spring.influxdb.password=example-admin-password
+influxdb.password=example-admin-password
