--- a/api/schemas/LocationInfo.yaml
+++ b/api/schemas/LocationInfo.yaml
@@ -21,12 +21,15 @@ properties:
   timestampMs:
     type: string
     format: date-time
+    example: "2020-04-07T13:06:23+02:00"
   userId:
     $ref: "./GenericId.yaml#"
   anonymous:
     type: boolean
+    example: false
   inside:
     type: boolean
+    example: true
   placeIds:
     type: array
     items:
