--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 server.port=11111
 spring.application.name=Stalker server
 # TODO add to bumpfiles or expand from gradle
-spring.application.version=0.1.0
+spring.application.version=0.3.0
 
 # ===============================
 # = DATA SOURCE
@@ -15,7 +15,12 @@ spring.application.version=0.1.0
 # spring.datasource.url=????:????://localhost:3306/
 # spring.datasource.name=stalker-rdb
 # spring.datasource.username=root
-
+# ===============================
+# = TIME-SERIES DATA SOURCE
+# ===============================
+influxdb.url="http://localhost:8086"
+influxdb.database="stalker-tsdb"
+influxdb.user="root"
 # ===============================
 # = OTHER
 # ===============================
