--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,25 +8,26 @@ spring.application.version=0.3.0
 
 
 # ===============================
-# = DATA SOURCE
+# = RELATIONAL DATABASE
 # ===============================
-# TODO does env file expansion work here?
-# spring.datasource.driver-class-name=.....
-# TODO set datasource url
-# spring.datasource.url=????:????://localhost:3306/
-# spring.datasource.name=stalker-rdb
-# spring.datasource.username=root
-
+spring.r2dbc.url="r2dbc:mysql://localhost:3306"
+spring.r2dbc.name=stalker-rdb
+spring.r2dbc.username=root
+# spring.r2dbc.password should be defined in local.properties
 
 # ===============================
-# = TIME-SERIES DATA SOURCE
+# = TIME-SERIES DATABASE
 # ===============================
 influxdb.url="http://localhost:8086"
 influxdb.database="stalker-tsdb"
 influxdb.user="root"
+# influxdb.password should be defined in local.properties
 
+# ===============================
+# = SECURITY
+# ===============================
+# TODO write necessary configuration here
 
 # ===============================
 # = OTHER
 # ===============================
-# spring.main.lazy-initialization=true
