--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,11 @@ services:
       # The username is root (default)
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
 
-    expose:
-      - "3306"
+    ports:
+      - "3306:3306"
+
+    # expose:
+    #   - "3306"
 
     volumes:
       - type: volume
@@ -69,13 +72,29 @@ services:
       INFLUXDB_ADMIN_USER: root
       INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_ADMIN_PASSWORD:?err}
 
-    expose:
-      - "8086"
+    ports:
+      - "8086:8086"
+
+    # expose:
+    #   - "8086"
 
     volumes:
       - type: volume
         source: tsdb-data
         target: /var/lib/influxdb/data
+
+  # FIXME not working
+  rdb-gui:
+    image: phpmyadmin/phpmyadmin
+    depends_on:
+      - rdb
+
+    environment:
+      PMA_HOST: stalker-rdb
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
+
+    ports:
+      - "8080:80"
 
 volumes:
   rdb-data:
