--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
 //  Provides fast application restarts, LiveReload, and configurations for enhanced development experience.
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+// //  this is an in memory db to be used only during development
+//   runtimeOnly 'com.h2database:h2'
+//   runtimeOnly 'io.r2dbc:r2dbc-h2'
+
 //  MySQL JDBC and R2DBC driver.
   runtimeOnly 'dev.miku:r2dbc-mysql'
   runtimeOnly 'mysql:mysql-connector-java'
