--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ version: "3.7"
 # SOURCE is the named volume, TARGET is the folder inside the container MODE is ro (read-only),
 
 # We can use this command to dump the currently running mysql instance to a file:
-# docker exec rdb sh -c 'exec mysqldump --all-databases -uroot -p"$MYSQL_ROOT_PASSWORD"' > ./db/relational/dump/all-databases.sql
+# docker exec rdb bash -c 'exec mysqldump --all-databases -u"root" -p"$MYSQL_ROOT_PASSWORD"' > ./db/relational/dump/all-databases.sql
 
 # To get an interactive shell inside a RUNNING container, use:
 # 'docker-compose exec <service-mapping-key> <shell-command>'
@@ -41,11 +41,8 @@ services:
       # The username is root (default)
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
 
-    ports:
-      - "3306:3306"
-
-    # expose:
-    #   - "3306"
+    expose:
+      - "3306"
 
     volumes:
       - type: volume
@@ -72,29 +69,13 @@ services:
       INFLUXDB_ADMIN_USER: root
       INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_ADMIN_PASSWORD:?err}
 
-    ports:
-      - "8086:8086"
-
-    # expose:
-    #   - "8086"
+    expose:
+      - "8086"
 
     volumes:
       - type: volume
         source: tsdb-data
         target: /var/lib/influxdb/data
-
-  # FIXME not working
-  rdb-gui:
-    image: phpmyadmin/phpmyadmin
-    depends_on:
-      - rdb
-
-    environment:
-      PMA_HOST: stalker-rdb
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
-
-    ports:
-      - "8080:80"
 
 volumes:
   rdb-data:
