--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.application.version=0.3.0
 spring.r2dbc.url="r2dbc:mysql://localhost:3306"
 spring.r2dbc.name=stalker-rdb
 spring.r2dbc.username=root
-# spring.r2dbc.password should be defined in local.properties
+# FIXME spring.r2dbc.password should be defined in local.properties
+# this password has to be the same as the one defined in the root .env file
+spring.r2dbc.password=devpassword
 
 # ===============================
 # = TIME-SERIES DATABASE
@@ -20,7 +22,9 @@ spring.r2dbc.username=root
 influxdb.url="http://localhost:8086"
 influxdb.database="stalker-tsdb"
 influxdb.user="root"
-# influxdb.password should be defined in local.properties
+# FIXME influxdb.password should be defined in local.properties
+# this password has to be the same as the one defined in the root .env file
+influxdb.password=devpassword
 
 # ===============================
 # = SECURITY
@@ -30,3 +34,4 @@ influxdb.user="root"
 # ===============================
 # = OTHER
 # ===============================
+spring.main.banner-mode=off
