--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,22 +10,24 @@ spring.application.version=0.3.0
 # ===============================
 # = RELATIONAL DATABASE
 # ===============================
-spring.r2dbc.url="r2dbc:mysql://localhost:3306"
-spring.r2dbc.name=stalker-rdb
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.username=root
-# FIXME spring.r2dbc.password should be defined in local.properties
-# this password has to be the same as the one defined in the root .env file
+# # FIXME spring.r2dbc.password should be defined in local.properties
+# # this password has to be the same as the one defined in the root .env file
 spring.r2dbc.password=devpassword
+
 
 # ===============================
 # = TIME-SERIES DATABASE
 # ===============================
-influxdb.url="http://localhost:8086"
-influxdb.database="stalker-tsdb"
-influxdb.user="root"
+influxdb.url=http://localhost:8086
+# Probably unneeded; the db and retention policy creation should be delegated to docker
+influxdb.database=stalker-tsdb
+influxdb.user=root
 # FIXME influxdb.password should be defined in local.properties
 # this password has to be the same as the one defined in the root .env file
 influxdb.password=devpassword
+
 
 # ===============================
 # = SECURITY
