fix: fix some typos and add  bearer JWT tokens

--- a/api/schemas/Place.yaml
+++ b/api/schemas/Place.yaml
@@ -40,7 +40,7 @@ properties:
     properties:
       address:
         type: string
-        example: Via Trieste
+        example: Via Trieste, 1
       city:
         type: string
         example: Padova
