--- a/api/model/AppConnection.v1.yaml
+++ b/api/model/AppConnection.v1.yaml
@@ -1,6 +1,6 @@
 title: Connection
 type: object
-description: Represents the fact that an user has connected to an organization.
+description: Represents the fact that a user has connected to an organization.
 properties:
   organizationId:
     $ref: ./GenericId.v1.yaml
