--- a/api/schemas/AppConnection.yaml
+++ b/api/schemas/AppConnection.yaml
@@ -1,5 +1,5 @@
 type: object
-description: Represents the fact that an user has connected to an organization.
+description: Represents the fact that a user has connected to an organization.
 required:
   - organizationId
   - userId
