--- a/api/schemas/LocationInfo.yaml
+++ b/api/schemas/LocationInfo.yaml
@@ -1,5 +1,5 @@
 type: object
-description: Specifics of an user's current location relative to a place.
+description: Specifics of a user's current location relative to a place.
 required:
   - timestampMs
   - userId
