docs: better specify instructions for windows

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,4 @@ influxdb.password=devpassword
 # = OTHER
 # ===============================
 spring.main.banner-mode=off
+# spring.main.lazy-initialization=true
