--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,22 +6,35 @@ spring.application.name=Stalker server
 # TODO add to bumpfiles or expand from gradle
 spring.application.version=0.3.0
 
+
 # ===============================
-# = DATA SOURCE
+# = RELATIONAL DATABASE
 # ===============================
-# TODO does env file expansion work here?
-# spring.datasource.driver-class-name=.....
-# TODO set datasource url
-# spring.datasource.url=????:????://localhost:3306/
-# spring.datasource.name=stalker-rdb
-# spring.datasource.username=root
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
+spring.r2dbc.username=root
+# # FIXME spring.r2dbc.password should be defined in local.properties
+# # this password has to be the same as the one defined in the root .env file
+spring.r2dbc.password=devpassword
+
+
 # ===============================
-# = TIME-SERIES DATA SOURCE
+# = TIME-SERIES DATABASE
 # ===============================
-influxdb.url="http://localhost:8086"
-influxdb.database="stalker-tsdb"
-influxdb.user="root"
+influxdb.url=http://localhost:8086
+# Probably unneeded; the db and retention policy creation should be delegated to docker
+influxdb.database=stalker-tsdb
+influxdb.user=root
+# FIXME influxdb.password should be defined in local.properties
+# this password has to be the same as the one defined in the root .env file
+influxdb.password=devpassword
+
+
+# ===============================
+# = SECURITY
+# ===============================
+# TODO write necessary configuration here
+
 # ===============================
 # = OTHER
 # ===============================
-# spring.main.lazy-initialization=true
+spring.main.banner-mode=off
