fix: fix some generic mistakes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,7 @@ spring.main.banner-mode=off
 # TODO test if this works
 # spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=true
 
+# spring security
+springsecurity.jwt.key=mykey
+springsecurity.jwt.expirationtime=2800
+
