chore: add sonarcloud task and its ci job

--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,6 @@ MYSQL_ROOT_PASSWORD=example-root-password
 
 # InfluxDB
 INFLUXDB_ADMIN_PASSWORD=example-admin-password
+
+# SonarCloud login token
+SONARCLOUD_LOGIN=example-login-token
