--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.application.version=0.5.0
 # ===============================
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.username=root
-# # FIXME spring.r2dbc.password should be defined in local.properties
-# # this password has to be the same as the one defined in the root .env file
+# FIXME spring.r2dbc.password should be defined in local.properties
+# this password has to be the same as the one defined in the root .env file
 spring.r2dbc.password=devpassword
 
 
