--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
   id "org.sonarqube" version "2.8"
 
   // expand variables defined in dotenv
-  id "com.github.otkmnb2783.dotenv" version "0.0.1"
+  id "co.uzzu.dotenv.gradle" version "1.1.0"
 }
 
 group = 'tech.gruppone.stalker'
@@ -96,6 +96,6 @@ sonarqube {
     property "sonar.projectKey", "GruppOne_stalker-server"
     property "sonar.organization", "grupp-one"
     property "sonar.host.url", "https://sonarcloud.io"
-    property "sonar.login", "${env.SONARCLOUD_LOGIN}"
+    property "sonar.login", "${env.SONARCLOUD_LOGIN.orNull()}"
   }
 }
