--- a/.github/workflows/dynamic-analysis.yml
+++ b/.github/workflows/dynamic-analysis.yml
@@ -9,7 +9,14 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+      # probably need to checkout master too
       - uses: actions/checkout@v2
+        with:
+          ref: master
+
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Setup JDK 11
         uses: actions/setup-java@v1
@@ -17,4 +24,4 @@ jobs:
           java-version: 11
 
       - name: Run SonarCloud scanner gradle task
-        run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN }} -Dsonar.pullrequest.branch=${{ github.head_ref }}
+        run: ./gradlew sonarqube -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN }} -Dsonar.pullrequest.key=${{ github.event.number }} -Dsonar.pullrequest.branch=${{ github.head_ref }}
